--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "axios": "^1.6.5",
     "buffer-crc32": "^0.2.13",
     "https-proxy-agent": "^7.0.2",
+    "iconv-lite": "^0.6.3",
     "semver": "^7.5.4",
     "tar-stream": "^3.1.6",
     "zigbee-herdsman": "^0.30.0"
