--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint": "^8.56.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jest": "^27.6.3",
+    "eslint-plugin-tsdoc": "^0.2.17",
     "fast-deep-equal": "*",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
