Replace xiaomi with lumi

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "git+https://github.com/Koenkk/zigbee-herdsman-converters.git"
   },
   "keywords": [
-    "xiaomi",
+    "aqara",
     "tradfri",
     "hue",
     "wemo",
