--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   ],
   "scripts": {
     "lint": "eslint .",
-    "test": "ZHC_TEST=true jest test --silent",
-    "test-watch": "ZHC_TEST=true jest test --silent --watch",
+    "test": "ZHC_TEST=true jest test --silent --maxWorkers=50%",
+    "test-watch": "ZHC_TEST=true jest test --silent --watch --maxWorkers=25%",
     "clean": "rimraf --glob index* devices lib converters tsconfig.tsbuildinfo",
     "build": "tsc",
     "build-watch": "tsc --watch",
