--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/buffer-crc32": "^0.2.4",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.13.0",
+    "@types/semver": "^7.5.8",
     "@types/tar-stream": "^3.1.3",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
