--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "zigbee-shepherd"
   ],
   "scripts": {
-    "lint": "eslint .",
+    "eslint": "eslint src/  --max-warnings=0",
+    "pretty:write": "prettier --write lib test",
+    "pretty:check": "prettier --check lib test",
     "test": "ZHC_TEST=true jest test --silent --maxWorkers=50%",
     "test-watch": "ZHC_TEST=true jest test --silent --watch --maxWorkers=25%",
     "clean": "rimraf --glob index* devices lib converters tsconfig.tsbuildinfo",
@@ -59,11 +61,13 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "eslint": "^8.57.0",
-    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-perfectionist": "^2.11.0",
     "eslint-plugin-tsdoc": "^0.3.0",
     "fast-deep-equal": "*",
     "jest": "^29.7.0",
+    "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
     "ts-jest": "^29.1.5",
     "ts-morph": "^22.0.0",
