--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,12 @@ jobs:
       run: npm ci
     - name: Build
       run: npm run build
+    - name: Lint
+      run: |
+        npm run pretty:check
+        npm run eslint
     - name: Test
       run: npm test
-    - name: Lint
-      run: npm run lint
     - name: Publish new release
       if: startsWith(github.ref, 'refs/tags/') && github.event_name == 'push'
       run: |
