--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   ],
   "scripts": {
     "eslint": "eslint src/  --max-warnings=0",
-    "pretty:write": "prettier --write lib test",
-    "pretty:check": "prettier --check lib test",
+    "pretty:write": "prettier --write src test",
+    "pretty:check": "prettier --check src test",
     "test": "ZHC_TEST=true jest test --silent --maxWorkers=50%",
     "test-watch": "ZHC_TEST=true jest test --silent --watch --maxWorkers=25%",
     "clean": "rimraf --glob index* devices lib converters tsconfig.tsbuildinfo",
