--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "clean": "rimraf --glob index* devices lib converters tsconfig.tsbuildinfo",
     "build": "tsc",
     "build-watch": "tsc --watch",
-    "prepack": "npm run clean && npm run build"
+    "prepack": "npm run clean && npm run build",
+    "prepare": "husky"
   },
   "author": "Koen Kanters",
   "license": "MIT",
@@ -66,6 +67,7 @@
     "eslint-plugin-perfectionist": "^2.11.0",
     "eslint-plugin-tsdoc": "^0.3.0",
     "fast-deep-equal": "*",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
