--- a/.github/workflows/update_deps.yml
+++ b/.github/workflows/update_deps.yml
@@ -23,7 +23,7 @@ jobs:
     - run: npx npm-check-updates -u -x eslint
     - run: rm -f package-lock.json
     - run: npm install
-    - run: rm -rf .husky
+    - run: ls -l .git
     - run: mv .git/hooks/pre-commit .git/hooks/pre-commit.disabled
     - uses: peter-evans/create-pull-request@v6
       with:
