--- a/.github/workflows/update_deps.yml
+++ b/.github/workflows/update_deps.yml
@@ -23,7 +23,7 @@ jobs:
     - run: npx npm-check-updates -u -x eslint
     - run: rm -f package-lock.json
     - run: npm install
-    - run: ls -l .git
+    - run: rm -rf .git/hooks
     - uses: peter-evans/create-pull-request@v6
       with:
         commit-message: "fix(ignore): update dependencies"
