Fix tests for Windows.

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "eslint": "eslint src/  --max-warnings=0",
     "pretty:write": "prettier --write src test",
     "pretty:check": "prettier --check src test",
-    "test": "ZHC_TEST=true jest test --silent --maxWorkers=50%",
-    "test-watch": "ZHC_TEST=true jest test --silent --watch --maxWorkers=25%",
+    "test": "jest test --silent --maxWorkers=50%",
+    "test-watch": "jest test --silent --watch --maxWorkers=25%",
     "clean": "rimraf --glob index* devices lib converters tsconfig.tsbuildinfo",
     "build": "tsc",
     "build-watch": "tsc --watch",
