--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,17 +47,17 @@
                 "object",
                 "unknown"
               ],
-              "custom-groups": {
+              "customGroups": {
                 "value": {},
                 "type": {}
               },
-              "newlines-between": "always",
-              "internal-pattern": [
+              "newlinesBetween": "always",
+              "internalPattern": [
                 "~/**"
               ],
               "type": "natural",
               "order": "asc",
-              "ignore-case": false
+              "ignoreCase": false
             }
         ]
     },
