--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,23 @@
     "printWidth": 150,
     "bracketSpacing": false,
     "endOfLine": "lf",
-    "tabWidth": 4
+    "tabWidth": 4,
+    "importOrder": [
+        "",
+        "<TYPES>^(node:)",
+        "",
+        "<TYPES>",
+        "",
+        "<TYPES>^[.]",
+        "",
+        "<BUILTIN_MODULES>",
+        "",
+        "<THIRD_PARTY_MODULES>",
+        "",
+        "^zigbee",
+        "",
+        "^[.]"
+    ],
+    "importOrderParserPlugins": ["typescript", "decorators"],
+    "plugins": ["@ianvs/prettier-plugin-sort-imports"]
 }
