--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "zigbee-shepherd"
     ],
     "scripts": {
-        "eslint": "eslint src/  --max-warnings=0",
+        "eslint": "eslint --max-warnings=0",
         "pretty:write": "prettier --write .",
         "pretty:check": "prettier --check .",
         "test": "jest test --silent --maxWorkers=50%",
@@ -54,18 +54,16 @@
         "zigbee-herdsman": "^0.57.3"
     },
     "devDependencies": {
+        "@eslint/js": "^9.10.0",
+        "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
         "@types/buffer-crc32": "^0.2.4",
+        "@types/eslint__js": "^8.42.3",
         "@types/jest": "^29.5.12",
         "@types/node": "^22.5.4",
         "@types/semver": "^7.5.8",
         "@types/tar-stream": "^3.1.3",
-        "@typescript-eslint/eslint-plugin": "^8.4.0",
-        "@typescript-eslint/parser": "^8.4.0",
-        "eslint": "^8.57.0",
+        "eslint": "^9.10.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-jest": "^28.8.3",
-        "eslint-plugin-perfectionist": "^3.5.0",
-        "eslint-plugin-tsdoc": "^0.3.0",
         "fast-deep-equal": "*",
         "husky": "^9.1.5",
         "jest": "^29.7.0",
@@ -73,7 +71,8 @@
         "rimraf": "^6.0.1",
         "ts-jest": "^29.2.5",
         "ts-morph": "^23.0.0",
-        "typescript": "^5.5.4"
+        "typescript": "^5.5.4",
+        "typescript-eslint": "^8.4.0"
     },
     "jest": {
         "preset": "ts-jest",
