--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "build": "tsc",
         "build-watch": "tsc --watch",
         "prepack": "npm run clean && npm run build",
-        "prepare": "husky && npm run build"
+        "prepare": "husky"
     },
     "author": "Koen Kanters",
     "license": "MIT",
