--- a/package.json
+++ b/package.json
@@ -51,10 +51,11 @@
         "iconv-lite": "^0.6.3",
         "semver": "^7.6.3",
         "tar-stream": "^3.1.7",
-        "zigbee-herdsman": "^0.57.4"
+        "zigbee-herdsman": "^1.1.0"
     },
     "devDependencies": {
-        "@eslint/js": "^9.10.0",
+        "@eslint/core": "^0.6.0",
+        "@eslint/js": "^9.11.0",
         "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
         "@types/buffer-crc32": "^0.2.4",
         "@types/eslint__js": "^8.42.3",
@@ -62,7 +63,7 @@
         "@types/node": "^22.5.5",
         "@types/semver": "^7.5.8",
         "@types/tar-stream": "^3.1.3",
-        "eslint": "^9.10.0",
+        "eslint": "^9.11.0",
         "eslint-config-prettier": "^9.1.0",
         "fast-deep-equal": "*",
         "husky": "^9.1.6",
@@ -72,7 +73,7 @@
         "ts-jest": "^29.2.5",
         "ts-morph": "^23.0.0",
         "typescript": "^5.6.2",
-        "typescript-eslint": "^8.5.0"
+        "typescript-eslint": "^8.6.0"
     },
     "jest": {
         "preset": "ts-jest",
