--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,28 +11,30 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
+            - uses: pnpm/action-setup@v4
+              with:
+                  version: 9
             - uses: actions/setup-node@v4
               with:
                   node-version: 20
-                  registry-url: https://registry.npmjs.org/
-                  cache: npm
+                  cache: pnpm
             - name: Install dependencies
-              run: npm ci
+              run: pnpm i --frozen-lockfile
             - name: Build
-              run: npm run build
+              run: pnpm run build
             - name: Lint
               run: |
-                  npm run pretty:check
-                  npm run eslint
+                  pnpm run pretty:check
+                  pnpm run eslint
             - name: Test
-              run: npm test
+              run: pnpm test
             - name: Publish new release
               if: startsWith(github.ref, 'refs/tags/') && github.event_name == 'push'
               run: |
-                  npm publish
+                  pnpm publish
                   PACKAGE=$(node -p "require('./package.json').name")
                   VERSION=$(node -p "require('./package.json').version")
-                  until [ $(npm view $PACKAGE --json | jq --arg version "$VERSION" -r '.versions[] | select (. == $version)') ];
+                  until [ $(pnpm view $PACKAGE --json | jq --arg version "$VERSION" -r '.versions[] | select (. == $version)') ];
                   do
                     echo "Waiting for publish to complete"
                     sleep 5s
