--- a/.github/workflows/update_deps.yml
+++ b/.github/workflows/update_deps.yml
@@ -16,13 +16,14 @@ jobs:
             - uses: actions/checkout@v4
               with:
                   token: ${{ secrets.GH_TOKEN }}
+            - uses: pnpm/action-setup@v4
+              with:
+                  version: 9
             - uses: actions/setup-node@v4
               with:
                   node-version: 20
-                  cache: npm
-            - run: npx npm-check-updates -u
-            - run: rm -f package-lock.json
-            - run: npm install
+                  cache: pnpm
+            - run: pnpm up --latest
             - uses: peter-evans/create-pull-request@v7
               env:
                   HUSKY: '0'
