--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "iconv-lite": "^0.6.3",
         "semver": "^7.6.3",
         "tar-stream": "^3.1.7",
+        "uri-js": "^4.4.1",
         "zigbee-herdsman": "^2.1.3"
     },
     "devDependencies": {
