--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
     "image": "mcr.microsoft.com/devcontainers/javascript-node:20",
 
-    "postCreateCommand": "npm install",
+    "postCreateCommand": "pnpm i --frozen-lockfile",
 
     "customizations": {
         "vscode": {
