--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "clean": "rimraf --glob index* devices lib converters tsconfig.tsbuildinfo",
         "build": "tsc",
         "build-watch": "tsc --watch",
-        "prepack": "npm run clean && npm run build",
+        "prepack": "pnpm run clean && pnpm run build",
         "prepare": "husky"
     },
     "author": "Koen Kanters",
@@ -51,6 +51,7 @@
         "iconv-lite": "^0.6.3",
         "semver": "^7.6.3",
         "tar-stream": "^3.1.7",
+        "uri-js": "^4.4.1",
         "zigbee-herdsman": "^2.1.3"
     },
     "devDependencies": {
