--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
             - name: Publish new release
               if: startsWith(github.ref, 'refs/tags/') && github.event_name == 'push'
               run: |
-                  pnpm publish
+                  pnpm publish --no-git-checks
                   PACKAGE=$(node -p "require('./package.json').name")
                   VERSION=$(node -p "require('./package.json').version")
                   until [ $(pnpm view $PACKAGE --json | jq --arg version "$VERSION" -r '.versions[] | select (. == $version)') ];
