chore: add candeo to nitpicks https://github.com/Koenkk/zigbee-herdsman-converters/pull/8142

--- a/.github/nitpicks.yml
+++ b/.github/nitpicks.yml
@@ -2,3 +2,7 @@
       Since you are the file owner, could you check this @martyn-vesternet?
   pathFilter:
       - 'src/devices/vesternet.ts'
+- markdown: |
+      Since you are the file owner, could you check this @candeodevelopment / @dhc25?
+  pathFilter:
+      - 'src/devices/candeo.ts'
